# market_news

./: .gitignore  .mcp.json  README.md  pyproject.toml
data/: edgar_ingest.py  factors.py  labels.py  membership.py  pipeline.py  prices.py
docs/: plan.md
eval/: backtest.py  leakage_canary.py  metrics.py
scripts/: 01_ingest_edgar.py  02_label_events.py  03_leakage_canary.py  04_spot_check.py  05_ingest_stage1.py  06_build_dataset.py  07_evaluate.py  08_ingest_stage2.py  09_backtest.py  10_diagnose.py
training/: dataset.py  infer.py  infer_probs.py  prompt.py  train_qwen.py
